Archive2/2b/1d8250060c8cf4/output
main.cpp: In instantiation of 'class Intervall<int>':
main.cpp:50:34:   required from here
main.cpp:30:22: error: template-id 'operator+<>' for 'Intervall<int> operator+(Intervall<int>, Intervall<int>)' does not match any template declaration
     friend Intervall operator+ <>(Intervall lhs, Intervall rhs);
                      ^
main.cpp: In instantiation of 'class Intervall<double>':
main.cpp:51:38:   required from here
main.cpp:30:22: error: template-id 'operator+<>' for 'Intervall<double> operator+(Intervall<double>, Intervall<double>)' does not match any template declaration
